--- a/api-server/Cargo.toml
+++ b/api-server/Cargo.toml
@@ -17,4 +17,5 @@ diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
 r2d2 = "0.8"
 serde_json = "1"
 serde = { version = "1.0", features = ["derive"] }
-wot-replays = { git = "https://github.com/SergeyTsaplin/wot-replays-rs", branch = "main"}
+# wot-replays = { git = "https://github.com/SergeyTsaplin/wot-replays-rs", branch = "main"}
+wot-replays = { path = "../../wot-replays-rs/wot-replays-lib" }
